coq (8.2-1+dfsg-1) UNRELEASED; urgency=low

  * New Upstream Version

 -- Stephane Glondu <steph@glondu.net>  Thu, 19 Feb 2009 13:13:31 +0100

coq (8.2~rc2+dfsg-3) experimental; urgency=low

  * Explicit more dependencies and drop dependency on
    ocaml-best-compilers, for autobuilders

 -- Stephane Glondu <steph@glondu.net>  Sun, 08 Feb 2009 22:42:51 +0100

coq (8.2~rc2+dfsg-2) experimental; urgency=low

  * Add more versioned dependencies to please buildds

 -- Stephane Glondu <steph@glondu.net>  Sun, 08 Feb 2009 10:52:43 +0100

coq (8.2~rc2+dfsg-1) experimental; urgency=low

  * New upstream release candidate
  * Bump debhelper compatibility level to 7
  * Remove obsolete patches
  * Use debhelper 7, simplify debian/rules (Closes: #436684)
  * Add binary package libcoq-ocaml-dev
  * Rename package coq-libs to coq-theories to avoid confusion, and
    add a NEWS file to document it
  * Add virtual coq-$ABI package, to express some ABI dependencies,
    and put $ABI in /usr/lib/coq/abi.

 -- Stephane Glondu <steph@glondu.net>  Mon, 02 Feb 2009 09:23:42 +0100

coq (8.2~beta4+dfsg-2) experimental; urgency=low

  * [45cca7f] Add non-native-archs.dpatch; fixes FTBFS on non-native
    architectures (Closes: #495165)

 -- Stephane Glondu <steph@glondu.net>  Fri, 15 Aug 2008 13:20:16 +0200

coq (8.2~beta4+dfsg-1) experimental; urgency=low

  [ Samuel Mimram ]
  * New upstream release.
  * Updated patches and removed coqdoc_stdlib, makefile, configure and
    cmxa-install obsolete patches.

  [ Stephane Glondu ]
  * Update debian/rules and debhelper files
  * [8dd1802] Fix typo in README.Debian
  * [dec29bb] Add myself to Uploaders, and DM-Upload-Allowed to control
  * [dd1436b] Switch packaging to git
  * [2dd9e5d] Set doc-base section to Science/Mathematics
  * [c89cb94] Add Homepage field
  * [7dd7c53] Add debian/README.source
  * [1c6c7c8] Bump Standards-Version to 3.8.0
  * [38db629] Remove browser.dpatch and use --browser configure option