@@ -1,8 +1,12 @@
 coq (8.2-1+dfsg-1) UNRELEASED; urgency=low
 
+  [ Stephane Glondu ]
   * New Upstream Version
 
- -- Stephane Glondu <steph@glondu.net>  Thu, 19 Feb 2009 13:13:31 +0100
+  [ Samuel Mimram ]
+  * Use variables from dh-ocaml in rules.
+
+ -- Samuel Mimram <smimram@debian.org>  Thu, 19 Feb 2009 13:27:14 +0100
 
 coq (8.2~rc2+dfsg-3) experimental; urgency=low
 
